Fixed UI alignment issues

--- a/src/assets/themes/mixins.scss
+++ b/src/assets/themes/mixins.scss
@@ -1540,7 +1540,8 @@
     .colunm-box {
       &.rule-border-row {
         border-bottom: 1px solid $color-app-border;
-        padding: initial 12px;
+        padding-left: 12px;
+        padding-right: 12px;
       }
 
       &.value-row:hover {
